# Uncertainty-Quantification-on-GNN-using-Stochastic-Centering

./: README.md  experiment_GdUQ_feature.py  experiment_GdUQ_hidden.py  experiment_class_based_anchor.py  experiment_dropout.py  experiment_ensemble.py  experiment_single_gcn.py  pyproject.toml
config/data/: Citeseer.yaml  Computers.yaml  Cora.yaml  Photo.yaml  Physics.yaml  PubMed.yaml
config/distribution_shifts/: feature_pertubation.yaml  leave_out_class.yaml  no_shift.yaml
config/model/: ensemble.yaml  gcn.yaml  gcn_cluster_anchored_feature.yaml  gcn_feature_anchor.yaml  gcn_hidden.yaml  gcn_hidden_adaptive_k_hop.yaml  gcn_hidden_avg_k_hop.yaml  gcn_hidden_optim.yaml
config/seml/: grid_GdUQ_feature.yaml  grid_GdUQ_feature_class_based.yaml  grid_GdUQ_hidden.yaml  grid_GdUQ_hidden_adaptive.yaml  grid_GdUQ_hidden_optim.yaml  grid_dropout_experiment.yaml  grid_ensemble_experiment.yaml  grid_single_gcn.yaml  singular_run.yaml
config/task/: node_classification.yaml
src/: init.py  metrics.py
src/anchoring/: __init__.py  anchoring.py
src/data/: build.py  data_loader.py  data_split.py  distribution_shifts.py
src/models/: ensemble.py  gcn_model.py  gcn_model_with_feature_anchoring.py  gcn_model_with_hidden_layer_anchoring.py  gcn_model_with_hidden_layer_anchoring_optim.py
src/plots/: __init__.py
src/training/: evaluate.py  train.py
src/utils/: ECELoss.py  EarlyStopper.py  pickl_save.py
